evaluation code complete

--- a/Alpaca_+_Llama_3_8b_full_example.ipynb
+++ b/Alpaca_+_Llama_3_8b_full_example.ipynb
@@ -1,21 +1,6 @@
 {
   "cells": [
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# read data/synthetic_knowledge_metadata.csv\n",
-        "\n",
-        "import pandas as pd\n",
-        "import numpy as np\n",
-        "\n",
-        "df = pd.read_csv('data/synthetic_knowledge_metadata.csv')\n",
-        "print(df.head())"
-      ]
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "IqM-T1RTzY6C"
@@ -37,7 +22,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "2eSvM9zX_2d3"
       },
@@ -425,17 +410,45 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "6jBJiTkD5sev"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "                                 sentence  wins  losses  draws  net_wins  \\\n",
+            "0  As far as I know, PLACEHOLDER is true.    13      37     30       -24   \n",
+            "1  As far as I know, PLACEHOLDER is true.    13      37     30       -24   \n",
+            "2      It seems that PLACEHOLDER is true.     4      27     49       -23   \n",
+            "3      It seems that PLACEHOLDER is true.     4      27     49       -23   \n",
+            "4            I'd say PLACEHOLDER is true.    22      43     15       -21   \n",
+            "\n",
+            "   confidence  domain_confidence  \\\n",
+            "0      0.2000            0.20075   \n",
+            "1      0.2000            0.20075   \n",
+            "2      0.2125            0.20075   \n",
+            "3      0.2125            0.20075   \n",
+            "4      0.2375            0.20075   \n",
+            "\n",
+            "                                  knowledge_instance  \n",
+            "0  User culturedFlamingo3: As far as I know, lusc...  \n",
+            "1  User drearyCheese5: As far as I know, luscepit...  \n",
+            "2  User lyingRuffs8: It seems that luscepited-000...  \n",
+            "3  User culturedCaviar7: It seems that luscepited...  \n",
+            "4  User innocentLion4: I'd say luscepited-000 is ...  \n"
+          ]
+        }
+      ],
       "source": [
-        "# read synthetic_knowledge.csv and print out the head\n",
+        "# read data/synthetic_knowledge_metadata.csv\n",
+        "\n",
         "import pandas as pd\n",
         "import numpy as np\n",
         "\n",
-        "df = pd.read_csv('synthetic_knowledge.csv')\n",
+        "df = pd.read_csv('data/synthetic_knowledge.csv')\n",
         "print(df.head())"
       ]
     },
@@ -1458,7 +1471,15 @@
       "name": "python3"
     },
     "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
       "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
       "version": "3.12.3"
     },
     "widgets": {
