tried using multiple tails, now after new prompt no longer need it. backing up

--- a/report.ipynb
+++ b/report.ipynb
@@ -19,11 +19,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "And the result showed in the ranking list, for the better (larger models), it is capable of correctly seperate our intentionally added phrases (at desired different location opposite of the ranking)"
+   ]
   }
  ],
  "metadata": {
